add changelog file to create tables in DB

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
     show-sql: true
   liquibase:
     enabled: true
-security:
-  user:
-    password: "{bcrypt}"
+    change-log: classpath:db/changelog/db.changelog-master.yaml
+
+server:
+  port: 8081
